# streamlit-work

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
app/pages/: .data_handling.py.swp  data_handling.py  form.py  utilities.py
data/: temperature.csv
streamlit_work/: .index.py.swp  index.py
streamlit_work/pages/: code.py  image.py
