[tool.poetry]
name = "streamlit-work"
version = "0.1.0"
description = ""
authors = ["ksh-fthr <ksh.fthr0806@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.12.2"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
